set sprite animation by selection

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+  <select id="sprite">
+    <option value="idle">Idle</option>
+    <option value="jump">Jump</option>
+    <option value="fall">Fall</option>
+    <option value="run">Run</option>
+    <option value="dizzy">Dizzy</option>
+    <option value="sit">Sit</option>
+    <option value="roll">Roll</option>
+    <option value="bite">Bite</option>
+    <option value="ko">KO</option>
+    <option value="getHit">Get Hit</option>
+  </select>
   <canvas id="canvas"></canvas>
 
   <img src="./assets/shadow-dog.png" alt="shadow-dog">
